--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,3 +181,23 @@ p {
     margin-right: 1.5rem;
   }
 }
+
+#topButton {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  left: 20px; /* Place the button 20px from the left */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #555; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#topButton:hover {
+  background-color: #444; /* Add a dark-grey background on hover */
+}
