--- a/src/style.css
+++ b/src/style.css
@@ -11945,7 +11945,6 @@ p {
 }
 .experience h3, .experience .h3 {
   text-align: center;
-  margin-left: 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -11966,39 +11965,27 @@ p {
 
 .contacts {
   background-image: linear-gradient(135deg, rgb(102, 126, 234) 0%, rgb(118, 75, 162) 100%);
-  height: 10rem;
+  height: 8rem;
   margin-top: 10rem;
   width: 100%;
   padding-left: 0 !important;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-direction: column;
 }
 
-.contacts-img {
-  height: 3rem;
-  width: 30%;
-  margin-left: auto;
-}
-.contacts-img img {
-  object-fit: cover;
-  height: 100%;
-  width: auto;
-  margin-left: auto;
-}
-@media (max-width: 600px) {
-  .contacts-img img {
-    padding-bottom: 1rem;
-    margin-left: 1rem;
-  }
+.contacts-links a {
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  color: inherit;
+  font-weight: 500;
 }
 
 .contacts-text {
   justify-self: center;
   align-self: center;
   text-align: center;
-  margin-right: auto;
-  margin-left: 0;
 }
 
 @media (max-width: 600px) {
