--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,7 +109,6 @@ p {
 
   h3 {
     text-align: center;
-    margin-left: 0.5rem;
     margin-bottom: 1rem;
   }
 }
@@ -139,32 +138,22 @@ p {
     rgb(102, 126, 234) 0%,
     rgb(118, 75, 162) 100%
   );
-  height: 10rem;
+  height: 8rem;
   margin-top: 10rem;
   width: 100%;
   padding-left: 0 !important;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-direction: column;
 }
 
-.contacts-img {
-  height: 3rem;
-  width: 30%;
-  margin-left: auto;
-
-  img {
-    object-fit: cover;
-    height: 100%;
-    width: auto;
-    margin-left: auto;
-  }
-
-  @media (max-width: 600px) {
-    img {
-      padding-bottom: 1rem;
-      margin-left: 1rem;
-    }
+.contacts-links {
+  a {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: inherit;
+    font-weight: 500;
   }
 }
 
@@ -172,8 +161,6 @@ p {
   justify-self: center;
   align-self: center;
   text-align: center;
-  margin-right: auto;
-  margin-left: 0;
 }
 
 @media (max-width: 600px) {
