--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,6 +154,7 @@ p {
     text-decoration: none;
     color: inherit;
     font-weight: 500;
+    width: 100%;
   }
 }
 
@@ -161,6 +162,7 @@ p {
   justify-self: center;
   align-self: center;
   text-align: center;
+  width: 100%;
 }
 
 @media (max-width: 600px) {
