--- a/src/style.css
+++ b/src/style.css
@@ -11911,8 +11911,20 @@ body {
   font-style: italic;
 }
 
+.engineer {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 20rem;
+  margin-top: 8rem;
+}
+.engineer img {
+  object-fit: cover;
+  height: 100%;
+}
+
 p {
-  margin-top: 30rem;
+  margin-top: 10rem;
   font-family: "Space Mono", monospace;
   font-style: italic;
   text-align: center;
