--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,6 +113,37 @@ p {
   }
 }
 
+@keyframes jump {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-20px); }
+}
+
+.tech-stack {
+  height: 3.5rem;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 10rem;
+  padding-left: 0 !important;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  // test
+  
+
+  img {
+    object-fit: cover;
+    margin: 0 .3rem;
+    height: 100%;
+    width: auto;
+    margin-bottom: 1rem;
+    display: inline-block;
+    //test
+    animation: jump 2s infinite;
+   
+  }
+}
+
 .experience {
   margin-top: 5rem;
   margin: auto;
