--- a/src/style.css
+++ b/src/style.css
@@ -11941,11 +11941,16 @@ p {
   align-items: center;
   justify-content: space-evenly;
 }
+
 .colaborations img {
   object-fit: cover;
   height: 100%;
   width: auto;
   filter: brightness(0) invert(1);
+}
+/* Collaborations styles */
+.colaborations {
+    position: relative; /* Position relative for absolute child */
 }
 
 @keyframes jump {
@@ -12006,7 +12011,7 @@ p {
 
 .contacts {
   background-image: linear-gradient(135deg, rgb(102, 126, 234) 0%, rgb(118, 75, 162) 100%);
-  height: 8rem;
+  height: 20rem;
   margin-top: 10rem;
   position: relative;
   width: 100%;
@@ -12034,6 +12039,10 @@ p {
   text-align: center;
   width: 100%;
   font-weight: bold;
+}
+
+.social-icon:hover {
+    transform: scale(1.1); /* Scale up on hover */
 }
 
 #topButton {
